# fang

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  build_cli.sh  build_runtime.sh  bump_version.sh  fang.toml  pyproject.toml  release.sh
.cargo/: pyo3-cpython-3.12.cfg  pyo3-cpython-3.13.cfg
.github/workflows/: release.yml  runtime-release.yml
fang/: __main__.py  _entry.py  archive.py  build.py  check.py  cli.py  config.py  discovery.py  init.py  inspector.py  output.py  runtime.py  theme.py  wordmark.py
fang-importer/: Cargo.toml  README.md  build.rs
fang-importer/src/: ext.rs  importer.rs  lib.rs  paths.rs
fang-importer/tests/: integration_test.rs
fang-pack/: Cargo.toml  README.md
fang-pack/src/: archive.rs  builder.rs  error.rs  format.rs  lib.rs  meta.rs  path.rs  platform.rs
fang-runtime/: Cargo.toml  README.md  build.rs
fang-runtime/src/: entrypoint.rs  frozen.rs  main.rs  python_init.rs  runtime_stdlib.rs  tool_mode.rs
fang-runtime/tests/hello/: build_archive.rs  run.sh
fang-runtime/tests/hello/app/: __main__.py
fang-runtime/tests/hello/hello/: __main__.py
fang-runtime/tests/tool_mode/: run.sh
fang/tests/: test_archive.py  test_build_integration.py  test_build_macho.py  test_build_native_libs.py  test_commands_json.py  test_config.py  test_runtime.py
python/fang_compat/: __init__.py  metadata.py
python/fang_compat/tests/: test_fang_compat_metadata.py
scripts/: build_stdlib_archive.py
