[project]
name = "fang"
version = "0.1.0"
description = "Single-binary Python app bundler"
license = "Apache-2.0 OR MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.7",
    "blake3>=0.4",
    "zstandard>=0.22",
    "pyfiglet>=1.0.4",
]

[project.scripts]
fang = "fang.__main__:main"

[tool.fang]
entry = "fang.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
